@@ -1,11 +1,13 @@
 package com.example.pro.service;
 
-import com.example.pro.dto.RecipeIngredientsDTO;
+import com.example.pro.dto.IngredientDTO;
+import com.example.pro.entity.IngredientEntity;
 import com.example.pro.repository.IngredientRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class IngredientServiceImpl implements IngredientService {
@@ -14,12 +16,11 @@ public class IngredientServiceImpl implements IngredientService {
     private IngredientRepository ingredientRepository;
 
     @Override
-    public List<RecipeIngredientsDTO> findAllIngredient() {
-        return ingredientRepository.findAll().stream()
-                .map(this::entityToDto) // IngredientEntity → IngredientDTO
-                .map(dto -> RecipeIngredientsDTO.builder()
-                        .ingredientDTO(dto) // 여기서 IngredientEntity가 아니라 DTO를 넣자!
-                        .build())
-                .toList();
+    public List<IngredientDTO> findAllIngredient() {
+        List<IngredientEntity> ingredientEntities = ingredientRepository.findAll();
+        List<IngredientDTO> ingredientDTOs = ingredientEntities.stream()
+                .map(ingredientEntity -> entityToDto(ingredientEntity))
+                .collect(Collectors.toList());
+        return ingredientDTOs;
     }
 }
